{
    "name": "BuildUIControls",
    "maps": [
        {
            "name": "Gamepad",
            "id": "82d6f7d5-8838-47a9-a585-adf1297df329",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "556513e2-f08d-412d-9ae5-f75bb9fde3f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "2f965e32-7c40-4afb-8848-8228c08e6cd8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2de4c924-0737-43b2-aa8d-215c71d51fc4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43819586-93b3-4866-9856-693d2901eae6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}