{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bdf0f444-f895-4b08-952c-07b2df685055",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "eaa5ce0e-3aba-4946-b272-4cbdeef1e97b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "bc9a5499-8ddf-4251-b7a7-c3ff13a1fbdd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "9bf39428-7dbd-4fc6-96b2-7eeeace3727a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9ce4506c-74e4-4366-8b4c-3a271948936f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "d6b37fe3-5a6b-4342-988a-ad359c36fe69",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Strafe",
                    "type": "Button",
                    "id": "06b6f533-b66b-4594-baf0-df4af03caa23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ab28316a-f03d-4f67-b16d-1b92a56f7027",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "Joystick",
                    "id": "6838346e-2b9e-4a45-a79d-61ef8741e46c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9eae11e4-4ec3-4119-8406-39dd3509775a",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c29a7301-176c-479a-ae5a-6f82fc613316",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7613c40-5c76-4b76-8842-5823402d1509",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1c103551-ed9f-49a7-a632-146d2d605e3e",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1f0eb3f2-ad78-493d-b724-3f423f35153c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8827b4c5-f000-453f-8ee0-9f34b2cecc45",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "affb4d2b-dc2b-434b-b390-bf1fdde53f3f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c829dea-1749-4d00-8876-0d16f10396d0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "922591b8-df92-4e4f-a4d4-7b2d16c4cacc",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03ffc547-c5f2-4802-8c06-34ede3843226",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildUI",
            "id": "37120fce-6b1d-46de-9c6e-b0bf9627337e",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "3df62b7e-11a3-4eff-a4d4-f7bea63ee6a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "203a9158-9146-4130-8a41-9a0fb076ec78",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectionMove",
                    "type": "PassThrough",
                    "id": "fb175881-cf31-4f03-957e-da1ec9e03179",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f9db6f2-22b3-4bc0-943f-8f66cc155770",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e878d52-ce88-4d4d-9fd2-419794551733",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6da21c4a-2193-418e-8b9d-edae14a7bcca",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}